--- a/.classpath
+++ b/.classpath
@@ -15,4 +15,12 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8/"/>
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
 	<classpathentry kind="output" path="bin/default"/>
+
+	<classpathentry
+       <groupId>org.slf4j.impl</groupId>
+       <artifactId>slf4j-simple</artifactId>
+       <version></version>
+       <scope>compile</scope>
+
+
 </classpath>
